CE-617:Fix toolbar labels font

--- a/src/containers/ToolBar/ProgressLabel/ProgressLabel.pcss
+++ b/src/containers/ToolBar/ProgressLabel/ProgressLabel.pcss
@@ -5,7 +5,8 @@
 
     &-additional {
         color: var(--trading-header-title);
-        font-size: var(--trading-header-font-size);
+        font-size: 12px;
+        white-space: nowrap;
     }
 
     &-progress {
