Feature: replace openware button to bootstrap button

--- a/src/containers/ChangePassword/ChangePassword.pcss
+++ b/src/containers/ChangePassword/ChangePassword.pcss
@@ -27,8 +27,9 @@
 .cr-modal {
   .pg-change-password-screen {
     display: flex;
-    justify-content: center;
-    min-height: calc(var(--big-gap) * 6.66);
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: calc(var(--big-gap) * 6);
     background-size: cover;
     margin: 0 auto;
 
@@ -86,6 +87,7 @@
 
       &__button-wrapper {
         min-height: calc(var(--gap) * 10);
+        position: initial;
       }
 
       &__button {
