--- a/src/containers/NavBar/NavBar.pcss
+++ b/src/containers/NavBar/NavBar.pcss
@@ -84,6 +84,7 @@
         align-items: center;
         width: 100%;
         max-width: calc((100% - 195px) / 2);
+        margin-bottom: 0;
 
         &-item,
         &-item:hover {
@@ -503,6 +504,7 @@
             }
 
             .language-menu {
+                left: auto;
                 right: -15px;
             }
         }
