--- a/src/custom/styles/screens/ReferralTicketsScreen.pcss
+++ b/src/custom/styles/screens/ReferralTicketsScreen.pcss
@@ -222,8 +222,9 @@
             }
 
             .card-top__right {
+              font-family: Roboto;
+              font-weight: 400;
               font-size: 32px;
-              font-weight: 300;
             }
           }
 
