Feature: add block nationality modal (#41)

--- a/src/custom/styles/components/style.pcss
+++ b/src/custom/styles/components/style.pcss
@@ -1,3 +1,4 @@
+@import "./BlockNationalityModal.pcss";
 @import "./CookiesConsent.pcss";
 @import "./CopyableTextField.pcss";
 @import "./DepositFiat.pcss";
