Fix: add message for idenfy process (#52)

--- a/src/custom/styles/containers/Idenfy.pcss
+++ b/src/custom/styles/containers/Idenfy.pcss
@@ -12,3 +12,26 @@
     width: calc(100% - 50px);
   }
 }
+
+.pg-attemps-idenfy {
+  display: flex;
+  justify-content: center;
+  height: 500px;
+  padding-top: 25px;
+  width: 100%;
+
+  &__content {
+    min-width: 300px;
+    width: calc(100% - 50px);
+    max-width: 400px;
+
+    p {
+      font-size: 14px;
+      color: var(--color-white);
+    }
+
+    .title {
+      font-size: 16px;
+    }
+  }
+}
