--- a/src/custom/styles/containers/Idenfy.pcss
+++ b/src/custom/styles/containers/Idenfy.pcss
@@ -24,6 +24,9 @@
     min-width: 300px;
     width: calc(100% - 50px);
     max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 
     p {
       font-size: 14px;
@@ -32,6 +35,16 @@
 
     .title {
       font-size: 16px;
+    }
+
+    .back-button {
+      color: var(--yellow);
+      font-size: 15px;
+      text-align: center;
+
+      &:hover {
+        cursor: pointer;
+      }
     }
   }
 }
