Add new tabs for sepa transfer & debit card

--- a/src/custom/styles/style.pcss
+++ b/src/custom/styles/style.pcss
@@ -5,3 +5,4 @@
 @import "./containers/style.pcss";
 @import "./components/style.pcss";
 @import "../components/Referral/Button/button.pcss";
+@import "../components/CardDepositFiat/CardDepositFiat.pcss";
