Fix: change text and size of kyc alert modal (#50)

--- a/src/custom/styles/components/KYCLoginModal.pcss
+++ b/src/custom/styles/components/KYCLoginModal.pcss
@@ -18,11 +18,12 @@
   &__body {
     margin-top: calc(var(--big-gap) * 1);
     position: absolute;
-    top: 30%;
+    top: 25%;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-width: 400px;
+    min-width: 350px;
+    max-width: 380px;
     min-height: 20%;
 
     &-box {
