Feature: add fiat deposit message (#51)

--- a/src/custom/styles/screens/WalletsScreen.pcss
+++ b/src/custom/styles/screens/WalletsScreen.pcss
@@ -20,6 +20,11 @@
     text-transform: uppercase;
   }
 
+  .fiat-alert {
+    color: var(--color-red);
+    margin-top: 15px;
+  }
+
   .cr-withdraw {
     &__group__address--focused,
     &__group__amount--focused,
