--- a/src/custom/styles/containers/Idenfy.pcss
+++ b/src/custom/styles/containers/Idenfy.pcss
@@ -31,14 +31,16 @@
     p {
       font-size: 14px;
       color: var(--color-white);
+      text-align: center;
     }
 
     .title {
       font-size: 16px;
+      margin-bottom: 30px;
     }
 
     .back-button {
-      color: var(--yellow);
+      color: var(--white);
       font-size: 15px;
       text-align: center;
 
