--- a/src/components/style.pcss
+++ b/src/components/style.pcss
@@ -23,3 +23,4 @@
 @import "./TabPanel/TabPanel.pcss";
 @import "./WalletItem/WalletItem.pcss";
 @import "./WalletList/WalletList.pcss";
+@import "./CustomInput/CustomInput.pcss";
