Add copyable field IEO programm into profile

--- a/src/containers/ReferralProgram/ReferralProgram.pcss
+++ b/src/containers/ReferralProgram/ReferralProgram.pcss
@@ -31,8 +31,10 @@
 
         input {
           box-sizing: border-box;
-          color: var(--placeholder-text);
+          color: #FFFFFF;
           background: var(--transparent);
+          font-size: 14px;
+          padding:  0 20px;
         }
 
         .cr-copyable-text-field__button {
