--- a/src/plugins/ieo/containers/IEOInfo/IEOInfo.pcss
+++ b/src/plugins/ieo/containers/IEOInfo/IEOInfo.pcss
@@ -8,10 +8,6 @@
   background: var(--main-bg);
   border-radius: calc(var(--gap) * 0.5);
 
-  @media (max-width: 768px) {
-    flex-direction: column;
-  }
-
   &__main {
     display: flex;
     flex-direction: column;
@@ -240,44 +236,15 @@
   }
 }
 
+@media (max-width: 768px) {
+  .ieo-profile-info {
+    flex-direction: column;
 
-@media (max-width: 576px) {
-  .ieo-profile-info__main {
-    width: 100%;
-    padding: calc(var(--gap) * 2);
-
-    &__info {
-      &__coin-area {
-        width: 100%;
-        justify-content: center;
-        padding: 0;
-      }
-
-      &__value {
-        width: 100%;
-        margin: calc(var(--gap) * 2.5) 0 calc(var(--gap) * 2.5) 0;
-
-        .expiration-time,
-        .ieo-price,
-        .ieo-goal,
-        .curent-progress-block {
-          margin-bottom: calc(var(--gap) * 1.75);
-        }
-
-        .curent-progress-block {
-          &__price {
-            font-size: calc(var(--gap) * 1.7);
-          }
-        }
-      }
-    }
-
-    &__description {
-      margin-top: 0;
+    &__order {
+      width: 100%;
     }
   }
 }
-
 
 @media (max-width: 576px) {
   .ieo-profile-info__main {
