--- a/src/screens/WalletsScreen/WalletsScreen.pcss
+++ b/src/screens/WalletsScreen/WalletsScreen.pcss
@@ -31,8 +31,13 @@
     }
 
     .cr-crypto-icon {
-        color: var(--white-color);
-        opacity: 0.5;
+      color: var(--white-color);
+      opacity: 1;
+
+      img {
+        width: 64px;
+        margin-right: calc(var(--gap) * 2);
+      }
     }
 
     .cr-wallet-list {
@@ -456,6 +461,11 @@
         &__icon-code {
             flex-grow: 1;
             margin-left: calc(var(--gap) * .6);
+            img {
+                width: 32px;
+                opacity: 0.5;
+                background: transparent;
+            }
         }
 
         &__amount-locked {
@@ -474,6 +484,12 @@
             .cr-wallet-item__icon-code {
                 background: transparent;
                 color: var(--wallet-item-active-color);
+
+                img {
+                    width: 32px;
+                    opacity: 1;
+                    background: transparent;
+                }
             }
         }
     }
