Feature: add profile residential address to KYC

--- a/src/custom/styles/containers/style.pcss
+++ b/src/custom/styles/containers/style.pcss
@@ -8,6 +8,7 @@
 @import "./Order.pcss";
 @import "./OrderBook.pcss";
 @import "./Phone.pcss";
+@import "./ProfileAddress.pcss";
 @import "./ProfilePartial.pcss";
 @import "./ProfileVerification.pcss";
 @import "./ProgressLabel.pcss";
