--- a/src/custom/styles/screens/ConfirmScreen.pcss
+++ b/src/custom/styles/screens/ConfirmScreen.pcss
@@ -43,6 +43,10 @@
 
     &-items {
       max-width: 190px;
+
+      &--long {
+        max-width: 285px;
+      }
     }
 
     &-first {
@@ -106,6 +110,10 @@
 
     &__progress-items {
       width: 70%;
+
+      &--long {
+        width: 60%;
+      }
     }
 
     &__content-profile-partial-forms {
