--- a/src/components/SignUp/SignUp.pcss
+++ b/src/components/SignUp/SignUp.pcss
@@ -7,10 +7,10 @@
   position: relative;
 
   &__terms-link {
-    display: inline;
-    vertical-align: -webkit-baseline-middle;
     font-size: 14px;
-    a {      
+    width: 95%;
+
+    a {
       color: white;
     }
   }
@@ -55,9 +55,28 @@
     bottom: 23px;
     left: 23px;
     box-sizing: border-box;
-    @media screen and (max-width: 768px) {
-      top: 80px !important;
-      font-size: 12px !important;
+
+    .custom-control {
+      &-label {
+        width: 100%;
+        font-size: calc(var(--gap) * 2.35);
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+
+        &:before {
+          width: 1.5rem;
+          height: 1.5rem;
+          margin-right: calc(var(--gap) * 3);
+          top: 1rem;
+        }
+
+        &:after {
+          width: 1.5rem;
+          height: 1.5rem;
+          top: 1rem;
+        }
+      }
     }
   }
 
@@ -190,43 +209,6 @@
     &-signin {
       cursor: pointer;
       padding-left: 10px;
-    }
-  }
-
-  &__checkbox {
-    display: inline;
-    vertical-align: -webkit-baseline-middle;
-    word-wrap: break-word;
-    background: transparent;
-    margin-left: 10px;
-
-    .cr-checkbox__checkitem {
-      border: 1px solid var(--placeholder-text);
-      border-radius: 4px;
-      background: transparent;
-
-      &::after {
-        border-color: var(--sign-up-checkbox-mark-color);
-      }
-    }
-
-    input:checked ~ .cr-checkbox__checkitem {
-      background-color: transparent;
-      vertical-align: middle;
-    }
-
-    .cr-checkbox__label {
-      background: transparent;
-      white-space: normal;
-      padding-top: 0;
-      position: relative;
-      left: 25px;
-      top: 5px;
-      font-style: normal;
-      font-weight: normal;
-      line-height: normal;
-      font-size: 12px;
-      color: var(--placeholder-text);;
     }
   }
 
