--- a/src/custom/styles/screens/ReferralTicketsScreen.pcss
+++ b/src/custom/styles/screens/ReferralTicketsScreen.pcss
@@ -285,6 +285,7 @@
         margin-left: auto;
         width: calc(78% + 60px);
         display: flex;
+        align-items: center;
         padding: 20px 0;
         margin-top: 40px;
         border-top: 1px solid rgba(0, 0, 0, .2);
