--- a/src/custom/styles/screens/ProfileScreen.pcss
+++ b/src/custom/styles/screens/ProfileScreen.pcss
@@ -12,8 +12,8 @@
     width: 100%;
 
     &__edit {
-      align-items: center;
-      align-items: flex-end;
+      align-items: left;
+      align-items: flex-start;
       color: var(--accent);
       cursor: pointer;
       display: flex;
@@ -24,7 +24,12 @@
       font-weight: normal;
       height: 18px;
       user-select: none;
-
+      @media screen and (max-width: 980px) and (min-width: 760px ) {
+        padding-bottom: 70px;
+      }
+       @media screen and (max-width: 488px)  {
+        padding-bottom: 70px;
+      }
       span {
         line-height: 35px;
       }
