Feature: add Expired session modal

--- a/src/components/style.pcss
+++ b/src/components/style.pcss
@@ -24,3 +24,4 @@
 @import "./WalletItem/WalletItem.pcss";
 @import "./WalletList/WalletList.pcss";
 @import "./CustomInput/CustomInput.pcss";
+@import "./ExpiredSessionModal/ExpiredSessionModal.pcss";
