Fix: redirection to KYC with fetching labels

--- a/src/components/Beneficiaries/Beneficiaries.pcss
+++ b/src/components/Beneficiaries/Beneficiaries.pcss
@@ -467,15 +467,16 @@
           font-weight: normal;
           font-size: 14px;
           position: absolute;
-          top: 0;
+          top: 12px;
         }
       }
-
       &__button-wrapper {
-        min-height: calc(var(--gap) * 0.5);
+        a {
+          width: 100%;
+        }
 
-        input {
-          color: var(--white);
+        &__btn {
+          width: 100%;
         }
       }
     }
