--- a/src/custom/components/ReferralTickets/Slider/styles.css
+++ b/src/custom/components/ReferralTickets/Slider/styles.css
@@ -10,7 +10,8 @@
     max-width: 150px;
     text-align: center;
     overflow: hidden;
-    box-shadow: 0 0 12px rgba(0, 0, 0, .03);
+    box-shadow: 0 0 12px rgba(0, 0, 0, .06);
+    margin: 5px 0;
 }
 
 #slider .slider-btn {
@@ -21,5 +22,5 @@
     font-size: 1.5em;
     background: white;
     text-align: center;
-    box-shadow: 0 0 12px rgba(0, 0, 0, .03);
+    box-shadow: 0 0 12px rgba(0, 0, 0, .06);
 }
