--- a/src/custom/components/ReferralTickets/Slider/styles.css
+++ b/src/custom/components/ReferralTickets/Slider/styles.css
@@ -8,10 +8,11 @@
     font-size: 1.5em;
     background: white;
     max-width: 150px;
+    min-width: 100px;
     text-align: center;
     overflow: hidden;
     box-shadow: 0 0 12px rgba(0, 0, 0, .06);
-    margin: 5px 0;
+    margin: 5px;
 }
 
 #slider .slider-btn {
@@ -23,4 +24,10 @@
     background: white;
     text-align: center;
     box-shadow: 0 0 12px rgba(0, 0, 0, .06);
+}
+
+#slider .slider-items-off {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
