Fix: use px instead of rem

--- a/src/components/SignUp/SignUp.pcss
+++ b/src/components/SignUp/SignUp.pcss
@@ -65,16 +65,16 @@
         justify-content: space-around;
 
         &:before {
-          width: 1.5rem;
-          height: 1.5rem;
+          width: 18px;
+          height: 18px;
           margin-right: calc(var(--gap) * 3);
           top: 1rem;
         }
 
         &:after {
-          width: 1.5rem;
-          height: 1.5rem;
-          top: 1rem;
+          width: 18px;
+          height: 18px;
+          top: 12px;
         }
       }
     }
