--- a/src/containers/ProfileApiKeys/ProfileApiKeys.pcss
+++ b/src/containers/ProfileApiKeys/ProfileApiKeys.pcss
@@ -1,7 +1,9 @@
-td {
+.pg-profile-page__api-keys__status {
   form {
     .custom-control {
       .custom-switch {
+        padding-left: 12px;
+
         input {
           top: 25px;
         }
@@ -9,15 +11,16 @@ td {
 
       &-label {
         &:before {
-          width: 2.75rem !important;
-          height: 1.5rem;
+          left: 21px;
+          width: 33px !important;
+          height: 18px;
           border-radius: 1rem !important;
         }
 
         &:after {
-          left: -1.75rem !important;
-          width: calc(1.5rem - 4px) !important;
-          height: calc(1.5rem - 4px) !important;
+          left: 27px !important;
+          width: 14px !important;
+          height: 14px !important;
         }
       }
     }
