--- a/src/custom/styles/containers/NavBar.pcss
+++ b/src/custom/styles/containers/NavBar.pcss
@@ -12,7 +12,7 @@
       text-transform: uppercase;
 
       &--active {
-        color: var(--bright-1);
+        /* color: var(--bright-1); */
         border-bottom: 2px solid var(--active-tab-color);
         font-weight: bold;
       }
