--- a/src/components/DepositCrypto/DepositCrypto.pcss
+++ b/src/components/DepositCrypto/DepositCrypto.pcss
@@ -28,10 +28,14 @@
     }
 
     &__copyable {
-        margin-top: calc(var(--gap) * 2.5);
+        margin-top: calc(var(--gap) * 6);
         display: flex;
         justify-content: space-between;
         align-items: center;
+
+        .custom-input {
+            width: 80%;
+        }
 
         &-title {
             background-color: inherit;
@@ -77,7 +81,7 @@
             }
 
             .cr-copyable-text-field {
-                border: none;
+                border: 1px solid var(--base);
             }
         }
     }
