--- a/src/screens/WalletsScreen/WalletsScreen.pcss
+++ b/src/screens/WalletsScreen/WalletsScreen.pcss
@@ -236,8 +236,15 @@
       }
     }
 
-    &__group__amount {
+    &__group__amount,
+    &__group__code {
       width: 50%;
+
+      .custom-input {
+        label {
+          margin-top: 0;
+        }
+      }
     }
 
     &__group__code {
