Fix: add hover effect to checkbox

--- a/src/components/SignUp/SignUp.pcss
+++ b/src/components/SignUp/SignUp.pcss
@@ -76,6 +76,10 @@
           height: 18px;
           top: 12px;
         }
+
+        &:hover {
+          cursor: pointer;
+        }
       }
     }
   }
