Fix: Change terms message in signup form

--- a/src/custom/styles/screens/ReferralScreen.pcss
+++ b/src/custom/styles/screens/ReferralScreen.pcss
@@ -96,7 +96,7 @@
         }
         &__terms-link {
             display: inline;
-            vertical-align: -webkit-baseline-middle;
+            /* vertical-align: -webkit-baseline-middle; */
             margin-left: -18px;
             padding-left: 0;
             color: black;
