--- a/src/components/OrderForm/OrderForm.pcss
+++ b/src/components/OrderForm/OrderForm.pcss
@@ -25,6 +25,8 @@
         text-align: left;
         font-size: calc(var(--gap) * 2);
         padding-left: calc(var(--gap) * 2);
+        height: calc(var(--gap) * 7);
+
     }
 
     &__dropdown__label {
@@ -71,9 +73,7 @@
                 font-size: calc(var(--gap) * 1.75);
             }
         }
-        &__crypto-icon {
-            width: auto;
-        }
+
         &__input {
             .cr-order-input__price {
                 display: inline-block;
