--- a/src/components/style.pcss
+++ b/src/components/style.pcss
@@ -27,3 +27,6 @@
 @import "./CustomInput/CustomInput.pcss";
 @import "./ExpiredSessionModal/ExpiredSessionModal.pcss";
 @import "./OrderInput/OrderInput.pcss";
+@import "./PercentageButton/PercentageButton.pcss";
+@import "./Markets/Markets.pcss";
+@import "./MarketDepths/MarketDepths.pcss";
