--- a/src/custom/components/CardDepositFiat/CardDepositFiat.pcss
+++ b/src/custom/components/CardDepositFiat/CardDepositFiat.pcss
@@ -47,6 +47,18 @@
     width: 200px;
   }
 
+  .depositCard input.button-disabled {
+    padding: 10px 20px;
+    background:gray;
+    border: none;
+    border-radius: 4px; 
+    font-size: 16px;
+    color: #FFFFFF;
+    cursor: pointer;
+    margin-left: 30px;
+    width: 200px;
+  }
+
 .depositCard a {
    text-decoration: none;
    color: rgba(255,255,255,0.5);
