Fix: resolve little bugs (#62)

--- a/src/components/style.pcss
+++ b/src/components/style.pcss
@@ -32,3 +32,6 @@
 @import "./MarketDepths/MarketDepths.pcss";
 @import "./Grid/Grid.pcss";
 @import "./FilterInput/FilterInput.pcss";
+@import "./Pagination/Pagination.pcss";
+@import "./Table/Table.pcss";
+@import "./CombinedOrderBook/CombinedOrderBook.pcss";
