Card page UI corrections.

--- a/src/styles/themes/light.pcss
+++ b/src/styles/themes/light.pcss
@@ -11,7 +11,7 @@
   --bright: #050505;
   --accent: #FFD567;
   --green: #54B489;
-  --red: #BD3039;
+  --red: #E85E59;
   --selected-item: #F0F1FF;
   --gamboge: #E0A300;
 
