Fix: remove unnecessary scrolls

--- a/src/screens/WalletsScreen/WalletsScreen.pcss
+++ b/src/screens/WalletsScreen/WalletsScreen.pcss
@@ -50,7 +50,7 @@
   .cr-wallet-list {
     background-color: var(--wallets-item-bg);
     margin-top: 0;
-    overflow: auto;
+    overflow: hidden;
     margin-bottom: 0;
 
     li {
