--- a/src/components/SignUp/SignUp.pcss
+++ b/src/components/SignUp/SignUp.pcss
@@ -58,7 +58,7 @@
 
     .custom-control {
       &-label {
-        width: 100%;
+        width: 83%;
         font-size: calc(var(--gap) * 2.35);
         display: flex;
         flex-direction: row;
@@ -68,13 +68,13 @@
           width: 18px;
           height: 18px;
           margin-right: calc(var(--gap) * 3);
-          top: 1rem;
+          top: 0;
         }
 
         &:after {
           width: 18px;
           height: 18px;
-          top: 12px;
+          top: 0;
         }
 
         &:hover {
@@ -196,8 +196,6 @@
     z-index: 2;
     right: 0;
     left: 0;
-    @media screen and (max-width: 768px) {
-      padding-top: 15px;
-    }
+    top: 10px;
   }
 }
