--- a/src/screens/WalletsScreen/WalletsScreen.pcss
+++ b/src/screens/WalletsScreen/WalletsScreen.pcss
@@ -245,6 +245,20 @@
         label {
           margin-top: 0;
         }
+
+        &:focus-within {
+          label {
+            color: var(--accent) !important;
+          }
+        }
+      }
+    }
+
+    &__group__amount {
+      .custom-input {
+        label{
+          margin-top: 2px;
+        }
       }
     }
 
@@ -270,7 +284,7 @@
       }
 
       input {
-      border-color: var(--sign-in-accent) !important;
+        border-color: var(--sign-in-accent) !important;
       }
     }
 
