--- a/src/custom/components/Referral/Partners/style.css
+++ b/src/custom/components/Referral/Partners/style.css
@@ -7,15 +7,18 @@
     align-items: center;
     padding: 5px 5px 50px;
 }
+
 .partners-wrapper h2 {
     padding: 60px 0 0px;
     text-align: center;
 }
+
 .partners-wrapper p {
     text-align: center;
     margin: 0;
     padding: 10px 0 50px;
 }
+
 .partners-wrapper .partners {
     display: flex;
     width: 600px;
@@ -23,6 +26,7 @@
     justify-content: space-between;
     padding: 0 0 100px;
 }
+
 .partners-wrapper .partner {
     text-decoration: none;
     display: flex;
@@ -30,47 +34,54 @@
     justify-content: center;
     align-items: center;
     background: #FFFFFF;
-    padding: 20px 20px;
+    width: 280px;
+    height: 150px;
     border-radius: 8px;
     box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.07);
     cursor: pointer;
 }
+
 .partners-wrapper .currency {
     color: #000000;
     display: flex;
     flex-direction: column;
 }
+
 .partners-wrapper .summ-row {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
 .partners-wrapper .summ {
     font-size: 42px;
     font-weight: bold;
     color: #00732F;
 }
+
 .partners-wrapper .partner img {
     width: 150px;
 }
+
 .partners-wrapper .partner span {
     padding: 0 10px;
 }
+
 .partners-wrapper .button {
     color: white;
     background: black;
     padding: 20px 50px;
     text-align: center;
     font-family: IBM Plex Sans;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 19.2px;
-  letter-spacing: 0.72px;
-  text-transform: uppercase;
-  display: inline-block;
-  border-radius: 6px;
-  cursor: pointer;
-  animation: flickerAnimation 1s infinite;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 19.2px;
+    letter-spacing: 0.72px;
+    text-transform: uppercase;
+    display: inline-block;
+    border-radius: 6px;
+    cursor: pointer;
+    animation: flickerAnimation 1s infinite;
 }
 
 @media screen and (max-width: 640px) {
@@ -79,8 +90,10 @@
         padding: 10px;
         width: 100%;
     }
+
     .partners-wrapper .partner {
         margin-bottom: 10px;
+        width: 100%;
     }
 
 }
