Feature: CE-1494 add link to sign up to corporate account

--- a/src/custom/styles/screens/SignUpScreen.pcss
+++ b/src/custom/styles/screens/SignUpScreen.pcss
@@ -28,5 +28,15 @@
         font-weight: bold !important;
       }
     }
+    &__corporate-link {
+        color: #ffd567;
+        cursor: pointer;
+        text-decoration: none;
+        width: 100%;
+        display: inline-block;
+        text-align: center;
+        font-size: 14px;
+        margin-top: 15px;
+    }
   }
 }
