Feature: add choice to EUR wallet

--- a/src/screens/WalletsScreen/WalletsScreen.pcss
+++ b/src/screens/WalletsScreen/WalletsScreen.pcss
@@ -375,6 +375,41 @@
         &__active {
             display: flex;
         }
+
+        .sepa-confirm {
+            display: flex;
+            width: 100%;
+            height: 200px;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+
+            &__text {
+                display: flex;
+                text-align: center;
+                font-size: 16px;
+            }
+
+            &__btn-block {
+                display: flex;
+                width: 100%;
+                height: 100px;
+                justify-content: space-around;
+                margin-top: 20px;
+            }
+
+            &__btn {
+                cursor: pointer;
+                background: rgb(17, 179, 130);
+                border: none;
+                color: rgb(255, 255, 255);
+                border-radius: 4px;
+                max-width: 200px;
+                height: 40px;
+                padding: 5px 15px;
+                font-size: 14px;
+            }
+        }
     }
 
     .cr-wallet-item {
