Feature: add landing page

--- a/src/components/style.pcss
+++ b/src/components/style.pcss
@@ -35,3 +35,4 @@
 @import "./Pagination/Pagination.pcss";
 @import "./Table/Table.pcss";
 @import "./CombinedOrderBook/CombinedOrderBook.pcss";
+@import "./TickerTable/TickerTable.pcss";
