--- a/src/styles/themes/basic.pcss
+++ b/src/styles/themes/basic.pcss
@@ -75,4 +75,10 @@
 
   --loader-base-color: var(--back-bg);
   --loader-start-color: var(--base);
+  /* Landing */
+  --light-bg-color: #FBFBFB;
+  --light-item-border: rgba(30, 40, 65, 0.05);
+  --table-hover-bg: #29344f;
+  --header-bg: #28334E;
+  --border-light: rgba(#fff, 0.5);
 }
