--- a/src/custom/styles/screens/ReferralCommissionScreen.pcss
+++ b/src/custom/styles/screens/ReferralCommissionScreen.pcss
@@ -373,13 +373,18 @@
     table{
         border-spacing: 0;
         margin-left: 30px;
+        table-layout: fixed;
+        width: 100%;
 
         .explanation{
             display: inline-block;
         }
 
+        th,
         td{
             font-size: 14px;
+            width: 20%;
+            overflow: hidden;
         }
 
         thead{
