Fix: update style to referal commission table

--- a/src/custom/styles/screens/ReferralCommissionScreen.pcss
+++ b/src/custom/styles/screens/ReferralCommissionScreen.pcss
@@ -548,6 +548,9 @@
             .container{
                 margin: 0;
                 padding: 0;
+                width: 100% !important;
+                max-width: 100%;
+                overflow: auto;
             }
         }
 
