--- a/src/custom/styles/screens/WalletsScreen.pcss
+++ b/src/custom/styles/screens/WalletsScreen.pcss
@@ -28,6 +28,8 @@
   .cr-withdraw {
     &__group__address--focused,
     &__group__amount--focused,
+    &__group__receive--focused,
+    &__group__transaction--focused,
     &__group__code--focused {
       .cr-withdraw__label {
         color: var(--button-normal) !important;
