fixed displaying of long emails

--- a/src/custom/styles/screens/ReferralCommissionScreen.pcss
+++ b/src/custom/styles/screens/ReferralCommissionScreen.pcss
@@ -421,6 +421,12 @@
                     .mobile-card-header{
                         display: none;
                     }
+
+                    .mobile-value{
+                        text-overflow: ellipsis;
+                        white-space: nowrap;
+                        overflow: hidden;
+                    }
         
                     &:last-of-type{
                         text-align: right;
