--- a/src/custom/styles/screens/ReferralCommissionScreen.pcss
+++ b/src/custom/styles/screens/ReferralCommissionScreen.pcss
@@ -549,6 +549,11 @@
                 margin: 0;
                 padding: 0;
             }
+
+            .column {
+                width: 100% !important;
+                max-width: 100%;
+            }
         }
 
         .explanation{
@@ -603,79 +608,8 @@
         }
 
         table{
-            display: block;
-            position: relative;
-            margin-left: 0px;
-            width: calc(100% + 40px);
+            width: 1000px;
 
-            tbody{
-                display: block;
-                width: 100%;
-
-                tr{
-                    display: flex;
-                    flex-direction: column;
-                    box-shadow: 0 1px 4px rgba(0,0,0, .2);
-                    border-radius: 6px;
-                    //width: 100%;
-                    padding: 20px;
-                    box-sizing: border-box;
-                    margin-bottom: 20px;
-                    
-                    td{
-                        border: 0 !important;
-                        padding: 10px 0;
-                        text-align: left;
-                        display: flex;
-
-                        .mobile-value, .mobile-card-header{
-                            text-align: left;
-                        }
-                        
-                        & > *{
-                            width: 40%;
-                            flex-grow: 1;
-                        }
-                        
-                        .mobile-card-header{
-                            display: block !important;
-                            color: rgba(0,0,0, .4);
-                        }
-                        
-                        .explanation{
-                            display: inline-block !important;
-                        }
-                    }
-                }
-                
-                &.summary-row{
-                    
-                    box-shadow: 0 1px 4px rgba(0,0,0, .2);
-                    margin-bottom: 20px;
-                    border-radius: 6px;
-                    
-                    tr{
-                        box-shadow: none;
-                        margin: 0;
-
-                        &:hover{
-                            background: #fff;
-                        }
-
-                        td{
-                            padding: 0px !important;
-
-                            &:hover{
-                                background: #fff;
-                            }
-                        }
-                    }
-                }
-            }
-
-            thead, tfoot{
-                //display: none;
-            }		
         }
     }
 
@@ -690,6 +624,10 @@
             .container{
                 padding-left: 0;
                 width: calc(100vw - 40px);
+            }
+
+            .column {
+                overflow: auto;
             }
         }
 
