Fix: rename variables to rgb

--- a/src/routes/Layout/Layout.pcss
+++ b/src/routes/Layout/Layout.pcss
@@ -3,7 +3,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position-x: right;
-  color: var(--rgb-secondary-contrast-cta-color);
+  color: var(--secondary-contrast-cta-color);
   min-height: calc(100vh - 95px);
   padding-right: 0;
   padding-left: 0;
@@ -12,5 +12,5 @@
 }
 
 .trading-layout {
-  background: var(--rgb-main-background-color);
+  background: var(--main-background-color);
 }
