--- a/src/screens/WalletsScreen/WalletsScreen.pcss
+++ b/src/screens/WalletsScreen/WalletsScreen.pcss
@@ -38,7 +38,7 @@
   }
 
   .cr-crypto-icon {
-    color: var(--rgb-primary-text-color);
+    color: var(--primary-text-color);
     opacity: 1;
 
     img {
@@ -86,7 +86,7 @@
         background: transparent;
 
         span {
-          color: var(--rgb-primary-text-color);
+          color: var(--primary-text-color);
           &:nth-child(1) {
             opacity: 0.5
           }
@@ -107,7 +107,7 @@
         opacity: 0.60;
 
         path {
-          fill: var(--rgb-primary-text-color);
+          fill: var(--primary-text-color);
         }
       }
 
@@ -133,7 +133,7 @@
         }
 
         .cr-crypto-icon {
-          color: var(--rgb-primary-text-color);
+          color: var(--primary-text-color);
           opacity: 1;
         }
 
@@ -142,7 +142,7 @@
           opacity: 1;
 
           path {
-            fill: var(--rgb-primary-text-color);
+            fill: var(--primary-text-color);
           }
         }
 
@@ -163,7 +163,7 @@
         &::before {
           content: '';
           width: 4px;
-          background-color: var(--rgb-primary-cta-color);
+          background-color: var(--primary-cta-color);
           height: calc(var(--gap) * 9);
           border-top-left-radius: calc(var(--gap) * 0.66);
           border-bottom-left-radius: calc(var(--gap) * 0.66);
@@ -229,7 +229,7 @@
         left: calc(var(--gap) * 1.66);
         padding: calc(var(--gap) * 0.33) var(--gap);
         border-radius: calc(var(--gap) * 0.33);
-        background: var(--rgb-input-background-color);
+        background: var(--input-background-color);
       }
 
       .custom-input {
@@ -362,7 +362,7 @@
   }
 
   .cr-tab-content {
-    background: var(--rgb-body-background-color);
+    background: var(--body-background-color);
     display: none;
     border-bottom-right-radius: calc(var(--gap) * .5);
     border-bottom-left-radius: calc(var(--gap) * .5);
@@ -374,8 +374,8 @@
 
   .cr-wallet-item {
     cursor: pointer;
-    background: var(--rgb-body-background-color);
-    color: var(--rgb-primary-text-color);
+    background: var(--body-background-color);
+    color: var(--primary-text-color);
     height: calc(var(--gap) * 9);
     box-sizing: border-box;
     border-bottom: 1px solid var(--wallets-item-border-color);
@@ -431,7 +431,7 @@
 
   .pg-wallet__tabs-content {
     display: flex;
-    background: var(--rgb-body-background-color);
+    background: var(--body-background-color);
   }
 
   .cr-search {
@@ -443,7 +443,7 @@
   }
 
   &__error {
-    color: var(--rgb-system-red);
+    color: var(--system-red);
     font-size: 1.2rem;
     margin-left: calc(var(--gap) * 4);
   }
@@ -452,7 +452,7 @@
     margin-left: calc(var(--gap) * 5);
 
     label {
-      color: var(--rgb-secondary-contrast-cta-color);
+      color: var(--secondary-contrast-cta-color);
       display: block;
     }
 
