--- a/src/index.pcss
+++ b/src/index.pcss
@@ -61,12 +61,12 @@ input[type=text], input[type=button] {
     height: auto;
     padding: 9px 12px 9px;
     cursor: move;
-    background: var(--rgb-subheader-background-color);
+    background: var(--subheader-background-color);
     box-shadow: inset 0 -1px 0 var(--divider-color-level-1);
     position: sticky;
     top: 0;
     z-index: 9999;
-    color: var(--rgb-primary-text-color);
+    color: var(--primary-text-color);
   }
 
   &-background {
@@ -117,13 +117,13 @@ body, html {
   font-family: var(--font-family);
   font-size: var(--font-size);
   font-weight: var(--font-weight);
-  color: var(--rgb-secondary-contrast-cta-color);
+  color: var(--secondary-contrast-cta-color);
   padding: 0;
   margin: 0;
 }
 
 body {
-  background: var(--rgb-main-background-color);
+  background: var(--main-background-color);
 }
 
 .pg-container {
@@ -224,7 +224,7 @@ body {
     z-index: 100;
   }
   .cr-grid-item__body {
-    background: var(--rgb-body-background-color);
+    background: var(--body-background-color);
     border-radius: 3px;
     overflow: scroll;
 
@@ -295,7 +295,7 @@ input:-webkit-autofill {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: var(--rgb-primary-cta-color);
+  background-color: var(--primary-cta-color);
   border-radius: var(--gap);
 }
 
