--- a/src/styles/themes/basic.pcss
+++ b/src/styles/themes/basic.pcss
@@ -15,52 +15,7 @@
   --selected-item: #3A4663;
   --gamboge: #E0A300; */
 
-  /* linear-gradients */
-  /* --background-dropdown: var(--button-normal);
-  --background-dropdown-hover: var(--header-text);
-  --button-dark-gray: linear-gradient(0deg, rgba(#fff, 0.5), rgba(#fff, 0.5)), var(--color-white);
-  --copyable-field-border: var(--base-2);
-  --header-border: var(--placeholder-text);
-  --input-block-border-color: var(--placeholder-text);
-  --sign-in-accent: var(--accent);
-  --table-header-color: var(--placeholder-text);
-  --table-header-text: var(--placeholder-text);
-  --text-muted: var(--placeholder-text);
-  --trading-header-background: var(--back-bg);
-  --trading-header-btn-open: var(--table-dark-header-color);
-  --trading-grid-background: #182034;
-  --trading-screen-background: var(--back-bg); */
-
-  /* KYC */
-  /* --kyc-circle-color: var(--main-bg); */
-
-  /* orders
-  --orders-button-percentage-text: var(--header-text);
-  --orders-border-color: var(--text);
-  --orders-button-percentage-normal: linear-gradient(0deg, rgba(#000, 0.11), rgba(#000, 0.11)), var(--selected-item);
-  --orders-button-percentage-hover: linear-gradient(0deg, rgba(#fff, 0.1), rgba(#fff, 0.1)), var(--orders-button-percentage-normal);
-  --orders-button-percentage-active: linear-gradient(0deg, rgba(#000, 0.1), rgba(#000, 0.1)), var(--orders-button-percentage-normal);
-  --orders-button-green-normal: var(--green);
-  --orders-button-green-hover: linear-gradient(0deg, rgba(#fff, 0.1), rgba(#fff, 0.1)), var(--orders-button-green-normal);
-  --orders-button-green-active: linear-gradient(0deg, rgba(#000, 0.1), rgba(#000, 0.1)), var(--orders-button-green-normal);
-  --orders-button-red-normal: var(--red);
-  --orders-button-red-hover: linear-gradient(0deg, rgba(#fff, 0.1), rgba(#fff, 0.1)), var(--orders-button-red-normal);
-  --orders-button-red-active: linear-gradient(0deg, rgba(#000, 0.1), rgba(#000, 0.1)), var(--orders-button-red-normal); */
-
-  /* NavBar languages */
-  /* --navbar-language-selector-background: var(--button-normal);
-  --navbar-language-selector-color: var(--placeholder-text);
-  --navbar-language-selector-current-color: var(--text);
-  --navbar-language-selector-current-background: var(--header);
-  --navbar-language-selector-color-hover: var(--white);
-  --navbar-language-selector-background-hover: var(--header-text); */
-
-  /* wallets */
-  /* --estimated-value-background: var(--base-bright);
-  --estimated-value-label-text: var(--placeholder-text);
-  --estimated-value-label-background: var(--header);
-
-  --whitelist-primary-0-8: rgba(255, 255, 255, 0.8);
+  /* --whitelist-primary-0-8: rgba(255, 255, 255, 0.8);
   --whitelist-primary-0-1: rgba(255, 255, 255, 0.1);
   --whitelist-primary-0-06: rgba(255, 255, 255, 0.06);
   --whitelist-primary-0-04: rgba(255, 255, 255, 0.04);
@@ -68,23 +23,6 @@
   --beneficiaries-primary-0-1: rgba(255, 255, 255, 0.1);
   --beneficiaries-primary-0-06: rgba(255, 255, 255, 0.06);
   --beneficiaries-primary-0-04: rgba(255, 255, 255, 0.04); */
-
-  /* sidebar */
-  /* --nav-item-selected: #324167;
-  --nav-item-hover: #3a4c79;
-
-  --loader-base-color: var(--back-bg);
-  --loader-start-color: var(--base); */
-  /* Landing
-  --light-bg-color: #FBFBFB;
-  --light-item-border: rgba(30, 40, 65, 0.05);
-  --table-hover-bg: #29344f;
-  --header-bg: #28334E;
-  --border-light: rgba(#fff, 0.5); */
-/*  ALL NAMES FOR VARIABLES TAKE FROM FIGMA
-*   IF YOU WANT RENAME VARIABLES, PLEASE FIRST RENAME IT IN FIGMA
-*   FOR (100% sync with FIGMA)
-*/
 
   --main-background-color: 20, 23, 23;               /* switch to light */
   --body-background-color: 34, 38, 39;               /* switch to light */
@@ -107,8 +45,8 @@
   --divider-color: 255, 255, 255;                    /* switch to light */
   --shadow-color: 23, 28, 41;                        /* switch to light */
 
-  --landing-background-color: 251, 251, 251;
-  --strength-meter-very-strong: 108, 239, 239; 
+  --rgb-landing-background-color: 251, 251, 251;
+  --rgb-strength-meter-very-strong: 108, 239, 239;
 
 /* BUTTON FONT WEIGHT */
 
