Fix: CE-2040 update 2fa verivication page

--- a/src/components/EmailForm/EmailForm.pcss
+++ b/src/components/EmailForm/EmailForm.pcss
@@ -35,12 +35,8 @@
   }
 
   &__form-content {
-    position: absolute;
-    top: 80px;
-    right: 23px;
-    bottom: 23px;
-    left: 23px;
     box-sizing: border-box;
+    padding: 10px 20px;
   }
 
   & > * {
@@ -60,7 +56,6 @@
 
   &__group {
     background: var(--transparent);
-    margin-bottom: 20px;
     position: relative;
   }
 
@@ -129,7 +124,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    position: absolute;
+    position: relative;
     right: 0;
     bottom: 0 !important;
     left: 0;
