--- a/src/components/style.pcss
+++ b/src/components/style.pcss
@@ -10,6 +10,7 @@
 @import "./WalletList/WalletList.pcss";
 @import "./WalletItem/WalletItem.pcss";
 @import "./TabPanel/TabPanel.pcss";
+@import "./TwoFactorAuth/TwoFactorAuth.pcss";
 @import "./Modal/Modal.pcss";
 @import "./Order/Order.pcss";
 @import "./CurrencyInfo/CurrencyInfo.pcss";
