--- a/src/components/TwoFactorAuth/TwoFactorAuth.pcss
+++ b/src/components/TwoFactorAuth/TwoFactorAuth.pcss
@@ -1,8 +1,8 @@
 .link-block {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    padding-top: 10px;
+    text-align: center;
+    padding-top: 30px;
 
     .text {
         width: calc(var(--big-gap) * 6.3);
@@ -11,7 +11,7 @@
         font-style: normal;
         font-weight: normal;
         line-height: calc(var(--gap) * 2.66);
-        font-size: calc(var(--gap) * 2.33);
+        font-size: calc(var(--gap) * 2.23);
         color: var(--placeholder-text);
     }
 
@@ -25,7 +25,7 @@
         font-style: normal;
         font-weight: normal;
         line-height: calc(var(--gap) * 2.66);
-        font-size: calc(var(--gap) * 2.33);
+        font-size: calc(var(--gap) * 2.23);
         color: var(--accent);
     }
 }
