WIP - implement icons on different labels

--- a/src/custom/styles/containers/ProfileVerification.pcss
+++ b/src/custom/styles/containers/ProfileVerification.pcss
@@ -105,6 +105,14 @@
       text-decoration: none;
       white-space: nowrap;
     }
+
+    &__icon-container {
+      margin-left: 8.5%;
+      margin-right: -8.5%;
+      margin-top: -3px;
+      text-decoration: none;
+      white-space: nowrap;
+    }
   }
 
   &__abilities {
