--- a/src/custom/styles/containers/ProfileVerification.pcss
+++ b/src/custom/styles/containers/ProfileVerification.pcss
@@ -67,8 +67,8 @@
     font-style: normal;
     font-weight: normal;
     height: 28px;
-    margin-bottom: 30px;
-    margin-left: 5%;
+    /* margin-bottom: 30px;
+    margin-left: 5%; */
     text-decoration: none;
     width: fit-content;
   }
@@ -77,8 +77,7 @@
     display: flex;
     justify-content: flex-end;
     width: max-content;
-    margin-bottom: 40px;
-
+    margin-bottom: 10px;
     a {
       align-items: center;
       color: var(--accent);
@@ -109,7 +108,7 @@
     &__icon-container {
       margin-left: 8.5%;
       margin-right: -8.5%;
-      margin-top: -3px;
+      margin-top: 4px;
       text-decoration: none;
       white-space: nowrap;
       position: relative;
@@ -118,10 +117,10 @@
     &__icon-hover {
       visibility: hidden;
       width: 250px;
-      background-color: rgba(1,1,1, 0.25);
+      background-color: rgba(1,1,1, 0.40);
       color: var(--accent);
       border-radius: 6px;
-      transform: translate(-45%, 20%);
+      transform: translate(-45%, 10%);
       padding: 10px 15px;
       position: absolute;
       z-index: 5;
@@ -134,6 +133,10 @@
     &__icon-container:hover &__icon-hover {
       visibility: visible;
     }
+  }
+
+  &__know-more:last-child {
+    margin-bottom: 40px;
   }
 
   &__abilities {
@@ -203,6 +206,13 @@
       background: var(--button-normal);
     }
   }
+
+  &__hr {
+    width: 60%;
+    margin-left: 0;
+    border: 1.5px solid var(--level-verification-border);
+    border-radius: 3px;
+  }
 }
 
 @media screen and (max-width: 1199px) {
@@ -224,13 +234,15 @@
     }
 
     &__know-more {
-      flex-direction: column;
       padding-left: 0;
       width: max-content;
 
       a, &__document-pending {
-        line-height: 30px;
         margin-left: 0;
+      }
+
+      &__icon-hover {
+        font-size: 12px;
       }
     }
 
