--- a/src/custom/styles/containers/ProfileVerification.pcss
+++ b/src/custom/styles/containers/ProfileVerification.pcss
@@ -117,10 +117,10 @@
     &__icon-hover {
       visibility: hidden;
       width: 250px;
-      background-color: rgba(1,1,1, 0.40);
+      background-color: rgba(1,1,1, 0.60);
       color: var(--accent);
       border-radius: 6px;
-      transform: translate(-45%, 10%);
+      transform: translate(15%, -30px);
       padding: 10px 15px;
       position: absolute;
       z-index: 5;
@@ -267,6 +267,13 @@
 
     &__upgrade-level {
       margin-left: 0;
+    }
+
+    &__know-more {
+      &__icon-hover {
+        transform: translate(-45%, 0%);
+        background-color: rgba(1,1,1, 0.80);
+      }
     }
   }
 }
